# mkdocs-platform-plugin

./: pyproject.toml
.github/workflows/: publish.yml
src/mkdocs_platform_plugin/: __init__.py
