[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-platform-plugin"
version = "0.1.0"
description = "MkDocs plugin to filter GitHub content-only and MkDocs website content-only."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ralvarezdev", email = "inquiries@ralvarez.dev"}]
keywords = ["mkdocs", "plugin", "documentation", "filter", "content"]
requires-python = ">=3.8"
dependencies = ["mkdocs>=1.5"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: MkDocs",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/ralvarezdev/mkdocs-platform-plugin"
Source = "https://github.com/ralvarezdev/mkdocs-platform-plugin/klevor"
Issues = "https://github.com/ralvarezdev/mkdocs-platform-plugin/klevor/issues"

[project.entry-points."mkdocs.plugins"]
platform-content = "mkdocs_platform_plugin:PlatformContentPlugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mkdocs_platform_plugin"]